# claude-atlas

./: .gitignore  .pre-commit-hooks.yaml  LICENSE  README.md  README.pt-BR.md  ROADMAP.md  ROADMAP.pt-BR.md  pyproject.toml
.claude/skills/claude-atlas/: SKILL.md
.github/: CODEOWNERS
.github/workflows/: ci.yml  publish.yml
comms/: LAUNCH-CHECKLIST.md  devto-launch.md  linkedin-launch.md
docs/issues/: 2026-05-16-symlink-false-positive-duplicate-exact.md
src/claude_atlas/: __init__.py  check.py  cli.py  fix.py  models.py
src/claude_atlas/analysis/: graph.py  llm_judge.py
src/claude_atlas/report/: renderer.py
src/claude_atlas/report/templates/: report.mustache
src/claude_atlas/scanner/: discovery.py  parsers.py
tests/: test_check.py  test_core.py  test_fix.py  test_pre_commit_hooks.py
