[project]
name = "claude-atlas"
version = "0.3.1"
description = "Scan, map, and visualize your Claude Code setup: agents, skills, slash commands, and memory files."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Gabriel Gripp" }]
keywords = [
    "claude-code",
    "anthropic",
    "developer-tools",
    "graph-visualization",
    "cli",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.12",
    "python-frontmatter>=1.1",
    "networkx>=3.2",
    "chevron>=0.14",
    "rich>=13.7",
]

[project.optional-dependencies]
semantic = ["anthropic>=0.40"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-chevron",
]

[project.scripts]
claude-atlas = "claude_atlas.cli:app"

[project.urls]
Homepage = "https://github.com/grippado/claude-atlas"
Repository = "https://github.com/grippado/claude-atlas"
Issues = "https://github.com/grippado/claude-atlas/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_atlas"]

[tool.hatch.build.targets.wheel.force-include]
"src/claude_atlas/report/templates/report.mustache" = "claude_atlas/report/templates/report.mustache"

[tool.hatch.build.targets.sdist]
include = [
    "src/claude_atlas",
    "tests",
    "README.md",
    "README.pt-BR.md",
    "ROADMAP.md",
    "ROADMAP.pt-BR.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501", "B008", "UP042"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
packages = ["claude_atlas"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
